<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- Parent: Spring Boot -->
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <!-- Project Coordinates -->
    <groupId>com.collabrix</groupId>
    <artifactId>collabrix-backend</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <name>Collabrix Backend</name>
    <description>Collabrix Backend Project</description>

    <modules>
        <module>collabrix-common-libraries</module>
        <module>collabrix-auth-service</module>
        <module>collabrix-security-starter</module>
	    <module>collabrix-global-config</module>
        <module>collabrix-user-service</module>
    </modules>

    <properties>
        <java.version>25</java.version>
        <spring.boot.version>3.5.7</spring.boot.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>2025.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
